@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: image.test,v 1.4 2000/05/15 18:21:47 ericm Exp $
+# RCS: @(#) $Id: image.test,v 1.5 2000/11/23 13:50:10 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -80,6 +80,9 @@ test image-1.9 {Tk_ImageCmd procedure, "create" option} {
     eval image delete [image names]
     list [catch {image create test -badName foo} msg] $msg [image names]
 } {1 {bad option name "-badName"} {}}
+test image-1.10 {Tk_ImageCmd procedure, "create" option} {
+    list [catch {image create test .} msg] $msg
+} {1 {image names cannot start with period symbols: "." is illegal}}
 
 test image-2.1 {Tk_ImageCmd procedure, "delete" option} {
     list [catch {image delete} msg] $msg
